# YTSearch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_REPORT.md  Dockerfile  README.md  REVIEW_SUMMARY.md  docker-compose.yml  main.py  mcp_stdio.py  pyproject.toml  test_redis_connection.py
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/instructions/: copilot-commit-message-instructions.md  python.instructions.md  test.instructions.md  timestamp.instructions.md
.github/prompts/: create-docker-script.prompt.md
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
scripts/: .env.docker.example  Dockerfile  build_docker.sh  cleanup_cron.py  run_docker.sh
specs/001-youtube-search-api/: analysis-report.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-youtube-search-api/checklists/: requirements-review.md  requirements.md
specs/001-youtube-search-api/contracts/: openapi.yaml
specs/002-mcp-support/: plan.md  spec.md  tasks.md
specs/002-mcp-support/checklists/: clarification-report.md  requirements-quality.md  requirements.md
specs/003-playlist-metadata/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-playlist-metadata/checklists/: requirements.md
specs/003-playlist-metadata/contracts/: openapi.yaml
specs/004-audio-download/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-audio-download/checklists/: requirements.md
specs/004-audio-download/contracts/: openapi.yaml
src/youtube_search/: __init__.py  config.py
src/youtube_search/api/: __init__.py
src/youtube_search/api/v1/: docs.py  download.py  playlist.py  search.py
src/youtube_search/mcp/: __init__.py  router.py  schemas.py  server.py
src/youtube_search/mcp/tools/: __init__.py  youtube_search.py
src/youtube_search/models/: __init__.py  download.py  playlist.py  search.py  video.py
src/youtube_search/services/: __init__.py  audio_downloader.py  cache.py  cache_manager.py  file_cleanup.py  normalizer.py  playlist.py  playlist_scraper.py  scraper.py  search.py  sorter.py
src/youtube_search/utils/: __init__.py  errors.py  logger.py  validators.py
tests/: conftest.py  test_api_basic.py
tests/integration/: test_api_metadata.py  test_cache.py  test_download_api.py  test_mcp_end_to_end.py  test_mcp_server_connection.py  test_mcp_server_integration.py  test_mcp_server_tools.py
tests/unit/: test_batch_download.sh  test_mcp_router.py  test_mcp_schemas.py  test_mcp_stdio_client.py  test_metadata_extraction.py  test_models.py  test_parameters.py  test_sorting.py  test_youtube_search_tool_basic.py  test_youtube_search_tool_limits.py
