[project]
name = "ytsearch"
version = "0.1.0"
description = "YouTube 搜尋 API - 無官方 API 成本的影片搜尋服務"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "sacahan", email = "sacahan@example.com" }]
keywords = ["youtube", "search", "api", "scraper", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.12"

dependencies = [
    # MCP Support - Added in feature branch 002-mcp-support
    "mcp>=1.0.0,<2.0.0",
    # Core dependencies
    "fastapi>=0.104.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.2",
    "requests>=2.31.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.31.1",
    # MCP-related dependencies
    "anyio>=4.5",
    "httpx>=0.27.1",
    "httpx-sse>=0.4",
    "jsonschema>=4.20.0",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.6.1",
    "starlette>=0.27",
    "typing-extensions>=4.9.0",
    "typing-inspection>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/youtube_search/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_search"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.lint.isort]
known-first-party = ["youtube_search"]
default-section = "third-party"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["-v"]

[tool.coverage.run]
source = ["src/youtube_search"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
